FunctionCraft/gen/main/grammar/FunctionCraftParser.java
// Generated from /Users/amin/Documents/UT/semester6/Compiler/ca/1/FunctionCraft 4/src/main/grammar/FunctionCraft.g4 by ANTLR 4.13.1
package main.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FunctionCraftParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, STR=2, FLOAT=3, TRUE=4, FALSE=5, COMMENT=6, CASE=7, NL=8, SPACE=9, 
		MAIN=10, DEF=11, RETURN=12, END=13, IF=14, ELIF=15, ELSE=16, LOOP_DO=17, 
		FOR=18, IN=19, NEXT=20, NEXTIF=21, BREAK=22, BREAKIF=23, CHOP=24, CHOMP=25, 
		PUSH=26, PUTS=27, METHOD=28, LEN=29, PATTERN=30, MATCH=31, NAME=32, LPAR=33, 
		RPAR=34, LBRACK=35, RBRACK=36, LCBRACK=37, RCBRACK=38, COMMA=39, SEMICOLON=40, 
		COLON=41, ARROW=42, CONCAT=43, DOT=44, EQ=45, DOTDOT=46, PLUS=47, DIV=48, 
		MULT=49, NEG=50, REM=51, UNI_OP=52, ASSIGN_OP=53, NOT=54, BOOL_OP1=55, 
		BOOL_OP2=56, OR=57, AND=58;
	public static final int
		RULE_program = 0, RULE_func_def = 1, RULE_params = 2, RULE_par_inside = 3, 
		RULE_obt_pars = 4, RULE_obts = 5, RULE_return_obj = 6, RULE_ret_exp = 7, 
		RULE_obj = 8, RULE_lambda = 9, RULE_lam_pars = 10, RULE_func_call = 11, 
		RULE_user_def = 12, RULE_call_pars = 13, RULE_built_in = 14, RULE_main = 15, 
		RULE_instructs = 16, RULE_clause = 17, RULE_assign = 18, RULE_value = 19, 
		RULE_pattern = 20, RULE_case = 21, RULE_loop = 22, RULE_loop_do = 23, 
		RULE_control = 24, RULE_conditions = 25, RULE_bool_exp = 26, RULE_arith_exp = 27, 
		RULE_for = 28, RULE_range = 29, RULE_if = 30, RULE_elseif = 31, RULE_else = 32, 
		RULE_list = 33, RULE_list_inside = 34, RULE_list_obj = 35, RULE_const = 36, 
		RULE_identifier = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "func_def", "params", "par_inside", "obt_pars", "obts", "return_obj", 
			"ret_exp", "obj", "lambda", "lam_pars", "func_call", "user_def", "call_pars", 
			"built_in", "main", "instructs", "clause", "assign", "value", "pattern", 
			"case", "loop", "loop_do", "control", "conditions", "bool_exp", "arith_exp", 
			"for", "range", "if", "elseif", "else", "list", "list_inside", "list_obj", 
			"const", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'true'", "'false'", null, "'    |'", null, "' '", 
			"'main'", "'def'", "'return'", "'end'", "'if'", "'elseif'", "'else'", 
			"'loop do'", "'for'", "'in'", "'next'", "'next if'", "'break'", "'break if'", 
			"'chop'", "'chomp'", "'push'", "'puts'", "'method'", "'len'", "'pattern'", 
			"'match'", null, "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "';'", 
			"':'", "'->'", "'<<'", "'.'", "'='", "'..'", "'+'", "'/'", "'*'", "'-'", 
			"'%'", null, null, "'!'", null, null, "'||'", "'&&'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INT", "STR", "FLOAT", "TRUE", "FALSE", "COMMENT", "CASE", "NL", 
			"SPACE", "MAIN", "DEF", "RETURN", "END", "IF", "ELIF", "ELSE", "LOOP_DO", 
			"FOR", "IN", "NEXT", "NEXTIF", "BREAK", "BREAKIF", "CHOP", "CHOMP", "PUSH", 
			"PUTS", "METHOD", "LEN", "PATTERN", "MATCH", "NAME", "LPAR", "RPAR", 
			"LBRACK", "RBRACK", "LCBRACK", "RCBRACK", "COMMA", "SEMICOLON", "COLON", 
			"ARROW", "CONCAT", "DOT", "EQ", "DOTDOT", "PLUS", "DIV", "MULT", "NEG", 
			"REM", "UNI_OP", "ASSIGN_OP", "NOT", "BOOL_OP1", "BOOL_OP2", "OR", "AND"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FunctionCraft.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FunctionCraftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public Func_defContext func_def() {
			return getRuleContext(Func_defContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(FunctionCraftParser.COMMENT, 0); }
		public TerminalNode NL() { return getToken(FunctionCraftParser.NL, 0); }
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FunctionCraftParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DEF:
					{
					setState(76);
					func_def();
					}
					break;
				case COMMENT:
					{
					setState(77);
					match(COMMENT);
					}
					break;
				case NL:
					{
					setState(78);
					match(NL);
					}
					break;
				case PATTERN:
					{
					setState(79);
					pattern();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(82);
				program();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				main();
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NL) {
					{
					setState(84);
					match(NL);
					}
				}

				setState(87);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_defContext extends ParserRuleContext {
		public Token name;
		public TerminalNode DEF() { return getToken(FunctionCraftParser.DEF, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(FunctionCraftParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(FunctionCraftParser.NL, i);
		}
		public TerminalNode END() { return getToken(FunctionCraftParser.END, 0); }
		public TerminalNode NAME() { return getToken(FunctionCraftParser.NAME, 0); }
		public InstructsContext instructs() {
			return getRuleContext(InstructsContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(FunctionCraftParser.RETURN, 0); }
		public Return_objContext return_obj() {
			return getRuleContext(Return_objContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(FunctionCraftParser.SEMICOLON, 0); }
		public Func_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterFunc_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitFunc_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitFunc_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_defContext func_def() throws RecognitionException {
		Func_defContext _localctx = new Func_defContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_func_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(DEF);
			setState(92);
			((Func_defContext)_localctx).name = match(NAME);
			 System.out.println("FuncDec: " + (((Func_defContext)_localctx).name!=null?((Func_defContext)_localctx).name.getText():null)); 
			setState(94);
			params();
			setState(95);
			match(NL);
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case STR:
			case FLOAT:
			case TRUE:
			case FALSE:
			case COMMENT:
			case NL:
			case IF:
			case LOOP_DO:
			case FOR:
			case CHOP:
			case CHOMP:
			case PUSH:
			case PUTS:
			case METHOD:
			case LEN:
			case PATTERN:
			case NAME:
			case LPAR:
			case LBRACK:
			case ARROW:
			case NEG:
			case NOT:
				{
				setState(96);
				instructs();
				}
				break;
			case RETURN:
				{
				setState(97);
				match(RETURN);
				 System.out.println("RETURN"); 
				setState(99);
				return_obj();
				setState(100);
				match(SEMICOLON);
				setState(101);
				match(NL);
				}
				break;
			case END:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(106);
			match(END);
			setState(107);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(FunctionCraftParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(FunctionCraftParser.RPAR, 0); }
		public Par_insideContext par_inside() {
			return getRuleContext(Par_insideContext.class,0);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_params);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(LPAR);
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAME:
			case LBRACK:
				{
				setState(110);
				par_inside();
				}
				break;
			case RPAR:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(114);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Par_insideContext extends ParserRuleContext {
		public Obt_parsContext obt_pars() {
			return getRuleContext(Obt_parsContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode NAME() { return getToken(FunctionCraftParser.NAME, 0); }
		public TerminalNode COMMA() { return getToken(FunctionCraftParser.COMMA, 0); }
		public Par_insideContext par_inside() {
			return getRuleContext(Par_insideContext.class,0);
		}
		public Par_insideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_par_inside; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterPar_inside(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitPar_inside(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitPar_inside(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Par_insideContext par_inside() throws RecognitionException {
		Par_insideContext _localctx = new Par_insideContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_par_inside);
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LBRACK:
					{
					setState(116);
					obt_pars();
					}
					break;
				case NAME:
					{
					setState(117);
					identifier();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				match(NAME);
				setState(121);
				match(COMMA);
				setState(122);
				par_inside();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Obt_parsContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(FunctionCraftParser.LBRACK, 0); }
		public ObtsContext obts() {
			return getRuleContext(ObtsContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(FunctionCraftParser.RBRACK, 0); }
		public Obt_parsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obt_pars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterObt_pars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitObt_pars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitObt_pars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Obt_parsContext obt_pars() throws RecognitionException {
		Obt_parsContext _localctx = new Obt_parsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_obt_pars);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(LBRACK);
			setState(126);
			obts();
			setState(127);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObtsContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(FunctionCraftParser.NAME, 0); }
		public TerminalNode EQ() { return getToken(FunctionCraftParser.EQ, 0); }
		public ConstContext const_() {
			return getRuleContext(ConstContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(FunctionCraftParser.COMMA, 0); }
		public ObtsContext obts() {
			return getRuleContext(ObtsContext.class,0);
		}
		public ObtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterObts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitObts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitObts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObtsContext obts() throws RecognitionException {
		ObtsContext _localctx = new ObtsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_obts);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(NAME);
			setState(130);
			match(EQ);
			setState(131);
			const_();
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				{
				setState(132);
				match(COMMA);
				setState(133);
				obts();
				}
				break;
			case RBRACK:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Return_objContext extends ParserRuleContext {
		public Ret_expContext ret_exp() {
			return getRuleContext(Ret_expContext.class,0);
		}
		public LambdaContext lambda() {
			return getRuleContext(LambdaContext.class,0);
		}
		public Return_objContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_obj; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterReturn_obj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitReturn_obj(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitReturn_obj(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Return_objContext return_obj() throws RecognitionException {
		Return_objContext _localctx = new Return_objContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_return_obj);
		try {
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				ret_exp(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				lambda();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ret_expContext extends ParserRuleContext {
		public Token name;
		public ObjContext obj() {
			return getRuleContext(ObjContext.class,0);
		}
		public TerminalNode LPAR() { return getToken(FunctionCraftParser.LPAR, 0); }
		public List<Ret_expContext> ret_exp() {
			return getRuleContexts(Ret_expContext.class);
		}
		public Ret_expContext ret_exp(int i) {
			return getRuleContext(Ret_expContext.class,i);
		}
		public TerminalNode RPAR() { return getToken(FunctionCraftParser.RPAR, 0); }
		public TerminalNode NOT() { return getToken(FunctionCraftParser.NOT, 0); }
		public TerminalNode NEG() { return getToken(FunctionCraftParser.NEG, 0); }
		public TerminalNode DIV() { return getToken(FunctionCraftParser.DIV, 0); }
		public TerminalNode MULT() { return getToken(FunctionCraftParser.MULT, 0); }
		public TerminalNode REM() { return getToken(FunctionCraftParser.REM, 0); }
		public TerminalNode PLUS() { return getToken(FunctionCraftParser.PLUS, 0); }
		public TerminalNode BOOL_OP1() { return getToken(FunctionCraftParser.BOOL_OP1, 0); }
		public TerminalNode BOOL_OP2() { return getToken(FunctionCraftParser.BOOL_OP2, 0); }
		public TerminalNode AND() { return getToken(FunctionCraftParser.AND, 0); }
		public TerminalNode OR() { return getToken(FunctionCraftParser.OR, 0); }
		public TerminalNode CONCAT() { return getToken(FunctionCraftParser.CONCAT, 0); }
		public TerminalNode UNI_OP() { return getToken(FunctionCraftParser.UNI_OP, 0); }
		public Ret_expContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ret_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterRet_exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitRet_exp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitRet_exp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ret_expContext ret_exp() throws RecognitionException {
		return ret_exp(0);
	}
